refactor(mentor): 데이터 중복 호출 해결